--- a/style/style.css
+++ b/style/style.css
@@ -22,6 +22,21 @@ font-size: 1.2rem;
 font-weight: 500px;
 color: #FFFFFF;
 }
+.sheared-h1{
+  color: #FFFFFF;
+  font-size: 4rem;
+  font-weight: 600;
+}
+.sheared-h3{
+  color: #FFFFFF;
+  font-size: 1rem;
+  font-weight: 400;
+}
+.sheared-p{
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 14px;
+  font-weight: 400;
+}
   /*Header  --  nav bar*/
   .nav{
     max-width: 1440px;
@@ -144,9 +159,65 @@ color: #FFFFFF;
 }
 
 
+/* 1st/habit section*/
 
-  /*media quary for small device */
-  @media screen and (max-width: 576px) {
+.habit-section{
+  width: 1440px;
+  margin: 0 auto;
+  text-align: center;
+}
+.habit-title{
+  width: 600px;
+  height: 180px;
+  margin: 0 auto;
+}
+.habit-title-container{
+  width: 671px;
+  height: 120px;
+}
+.habit-img-container{
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+}
+.habit-img{
+  width: 231px;
+  height: 274px;
+}
+.habit-img img{
+  border: 1px solid black;
+  border-radius: 100%;
+  margin-top: 30px;
+}
+ /*2nd section run*/
+ .run-section{
+  max-width: 1060px;
+  height: 450px;
+  margin: 100px auto 0 auto;
+  gap: 165px;
+  background-color: #252525;
+  border-radius: 20px;
+  align-items: center;
+  justify-content: center;
+ }
+ .run-container{
+  width: 400px;
+  height: 400px;
+ }
+ .run-img{
+  width: 400px;
+  height: 400px;
+  margin-top: 100px;
+ }
+ .run-img img{
+  width: 380px;
+  height: 320px;
+  border-radius: 20px;
+ }
+
+
+ /*media quary for small device */
+ @media screen and (max-width: 576px) {
   .nav-bar, .nav-links, .nav-links, .banner{
       flex-direction: column;
     }
@@ -159,28 +230,61 @@ color: #FFFFFF;
     .nav-home{
     margin-bottom: 8px;
     }
-
-    /*banner*/
-    .banner{
-  width: 100%;
-  padding: 10px;
+    .habit-img-container{
+      flex-direction: column;
     }
-    .banner-container, .banner-img{
+
+    /*1st section*/
+    .habit-section{
       width: 100%;
     }
-    .problem-btn{
-      margin-top: -190px;
-      margin-left: -20px;
+    .habit-title{
+      width: 100%;
+      height: 300px;
+      padding: 10px;
     }
-    .problem-btn2{
-      margin-left: 150px;
-      margin-top: -300px;
+    
+    /*banner*/
+    .banner{
+      width: 100%;
+      padding: 10px;
+        }
+        .banner-container, .banner-img{
+          width: 100%;
+        }
+        .problem-btn{
+          margin-top: -190px;
+          margin-left: -20px;
+        }
+        .problem-btn2{
+          margin-left: 150px;
+          margin-top: -300px;
+      }
+      .banner-join-btn, .banner-download-btn{
+        width: 160px;
+        display: inline;
+      }
+      .banner-img{
+        margin-left: 5px;
+       } 
+       /*eun section*/
+      .run-section{
+        flex-direction: column;
+        height: 700px;
+        width: 100%;
+      }
+      .run-container, .run-img{
+        width: 300px;
+      }
+      .run-img img{
+        width: 300px;
+        height: 230px;
+        margin-top: -700px;
+      }
+      .run-title{
+        font-size: 50px;
+      }
+      .run-description{
+        padding-bottom: 20px;
+      }
   }
-  .banner-join-btn, .banner-download-btn{
-    width: 160px;
-    display: inline;
-  }
-  .banner-img{
-    margin-left: 5px;
-   }
-}
