added team section

--- a/style/style.css
+++ b/style/style.css
@@ -313,6 +313,47 @@ margin: 0 auto;
 .input-select{
   margin-bottom:10px;
 }
+/*Team 5th section*/
+.Team{
+  max-width: 1440px;
+  margin: 0 auto;
+  max-height: 100%;
+}
+.Team-container{
+  width: 700px;
+  text-align: center;
+  margin: 0 auto;
+}
+.img-container {
+  width: 1090px;
+  height: 700px;
+  margin: 0 auto;
+  background-color: #252525; 
+}
+.ims-1st-cln  img{
+  width: 300px;
+  height: 300px;
+  border-radius: 10px;
+}
+.img{
+  width: 400px;
+  height: 300px;  
+}
+.ims-1st-cln {
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  margin: 0 auto;
+}
+.img h3{
+  margin-top: -60px;
+  margin-left: 10px;
+}
+.img p{
+  margin-top: -10px;
+  margin-left: 10px;
+}
+
 
 
 
@@ -434,5 +475,35 @@ margin: 0 auto;
     }
     .input-select input{
       width: 85%;
+    }
+    /*5th section*/
+    .Team-container,
+    .img-container,
+    .img,
+    .img-container,
+    .ims-1st-cln{
+      width: 100%;
+    }
+    .Team{
+      height: 2100px;
+      width: 100%;
+      background-color: #252525;
+    }
+    .Team-container{
+      padding: 10px;
+      width: 80%;
+    }
+    .ims-1st-cln{
+      flex-direction: column;
+      gap: 3px;
+    }
+    .img{
+      padding: 20px 10px;
+      width: 90%;
+      height: 90%;
+    }
+    .img img{
+      width: 90%;
+      height: 90%;
     }
   }
