--- a/style/style.css
+++ b/style/style.css
@@ -354,7 +354,18 @@ margin: 0 auto;
   margin-left: 10px;
 }
 
-
+/*footer section*/
+.footer{
+  max-width: 1100px;
+  margin: 20px auto 0 auto;
+}
+.footer-container{
+  justify-content: space-evenly;
+}
+.footer-foot{
+  width: 400px;
+  text-align: center;
+}
 
 
 
@@ -505,5 +516,16 @@ margin: 0 auto;
     .img img{
       width: 90%;
       height: 90%;
+    }
+    /*footer*/
+    .footer-container{
+      flex-direction: column;
+      width: 100%;
+    }
+    .footer{
+      width: 100%;
+    }
+    .footer-foot{
+      width: 90%;
     }
   }
